--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PRODIA_KEY=set only to set it server-side.
-CHANNEL_ID=
-BOT_TOKEN=
+CHANNEL_ID=discord channel for images
+BOT_TOKEN=discord token
 NODE_ENV=development
-OPENAI_API_KEY=
-REDIS_CONNECTION_STRING=
-REDIS_TOKEN=
+OPENAI_API_KEY=openai api
+REDIS_CONNECTION_STRING=upstash redis
+REDIS_TOKEN=upstash redis
