--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.23.2",
+    "@clerk/nextjs": "^4.23.2",
     "@material-ui/core": "^4.12.4",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "^10.4.14",
@@ -24,9 +26,11 @@
     "postcss": "^8.4.24",
     "rate-limiter-flexible": "^2.4.1",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-lightbox": "^5.1.4",
+    "react-select": "^5.7.4",
     "tailwindcss": "^3.3.2",
     "tls": "^0.0.1"
   },
