Logo as variable (thanks Altin)

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-PRODIA_KEY=set only to set it server-side.
+PRODIA_KEY=set to disable popup
 CHANNEL_ID=discord channel for images
 BOT_TOKEN=discord token
 NODE_ENV=development
 OPENAI_API_KEY=openai api
 REDIS_CONNECTION_STRING=upstash redis
 REDIS_TOKEN=upstash redis
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+LOGO_URL=
