--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@clerk/clerk-react": "^4.23.2",
     "@clerk/nextjs": "^4.23.2",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@upstash/redis": "^1.21.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
@@ -18,6 +20,7 @@
     "dns": "^0.2.2",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "ioredis": "^5.3.2",
     "net": "^1.0.2",
